fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! edit

--- a/packages/libclang-bindings/package.json
+++ b/packages/libclang-bindings/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -p .",
+    "build:watch": "tsc -w -p .",
     "prepublishOnly": "npm run build",
     "test": "jest"
   },
